Update with CarbonMapper experience

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="executive-summary">
-		<p>20 years of proven experience designing and implementing complex software solutions for new products. Dedicated to elegance and quality in code. Accomplished coder, team player, excellent communicator, creative problem-solver, experienced leader. Organized, self-motivated, and passionate about learning.</p>
+		<p>20+ years of proven experience designing and implementing complex software solutions for new products. Dedicated to elegance and quality in code. Accomplished coder, team player, excellent communicator, creative problem-solver, experienced leader. Organized, self-motivated, and passionate about learning.</p>
 	</div>
 
         {% if site.resume_looking_for_work == 'yes' %}
@@ -49,16 +49,17 @@
 
 	<div class="resume-item">
 		<ul class="columns">
-            <li class="column one-half">Python, C#, Clojure, Bash</li>
-            <li class="column one-half">Machine Learning, AI</li>
-            <li class="column one-half">Docker, Kubernetes</li>
-            <li class="column one-half">Geospatial Data Analysis</li>
+            <li class="column one-half">Python, C#, Golang, Bash</li>
+            <li class="column one-half">Geospatial Data Processing</li>
             <li class="column one-half">Google Cloud Platform</li>
+            <li class="column one-half">Amazon Web Services</li>
+            <li class="column one-half">Machine Learning, AI</li>
+            <li class="column one-half">Docker, Kubernetes, Serverless</li>
             <li class="column one-half">Terraform, Ansible</li>
-            <li class="column one-half">Elastic, PostgreSQL</li>
-            <li class="column one-half">Circle CI, Concourse CI</li>
+            <li class="column one-half">PostgreSQL, PostGIS, Elastic</li>
+            <li class="column one-half">Circle CI, Github Actions</li>
             <li class="column one-half">Agile, Scrum, Kanban, TDD</li>
-            <li class="column one-half">RESTful APIs, Clean Architecture</li>
+            <li class="column one-half">API Integrations, Clean Architecture</li>
             <li class="column one-half">Leadership</li>
 		</ul>
 	</div>
@@ -76,6 +77,18 @@
 	</header>
 
 	<div class="resume-item">
+		<h3 class="resume-item-title">Carbon Mapper, Inc.</h3>
+		<h4 class="resume-item-details">Senior Software Engineer &bull; 2023-Present</h4>
+		<p class="resume-item-copy">Back end engineer, with impacts including:</p>
+		<ul>
+			<li>Connected systems across organizational and cloud platform boundaries</li>
+			<li>Extended AWS infrastructure and automation to support new geospatial imagery products</li>
+			<li>Hardened Spatio-Temporal Asset Catalog (STAC) API to improve reliabilty and compliance</li>
+			<li>AWS, AWS Cloud Development Kit (CDK), GCP, Terraform, Python, STAC, Github Actions</li>
+		</ul>
+	</div>
+
+	<div class="resume-item">
 		<h3 class="resume-item-title">Arizona State University</h3>
 		<h4 class="resume-item-details">Principal Software Engineer &bull; 2021-Present</h4>
 		<p class="resume-item-copy">Lead engineer for the <a href="https://allencoralatlas.org">Allen Coral Atlas</a>, responsible for:</p>
@@ -84,6 +97,7 @@
 			<li>Planning and executing engineering team outcomes to meet the strategic vision for the Atlas</li>
 			<li>Coordinating engineering and scientific efforts with Vulcan Inc, the University of Queensland, the National Geographic Society, and other partner organizations</li>
 			<li>Training and mentoring junior engineers, students, and interns</li>
+			<li>Google Cloud Platform, Terraform, Circle CI, Docker, Kubernetes, Python, Golang, Geospatial Data Abstraction Library (GDAL), Google Earth Engine, QGIS, PostGIS, Argo Workflows</li>
 		</ul>
 	</div>
 
