--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -49,15 +49,15 @@
 
 	<div class="resume-item">
 		<ul class="columns">
-            <li class="column one-half">Python, C#, Golang, Bash</li>
+            <li class="column one-half">Python/Django, C#, Golang, Bash</li>
             <li class="column one-half">Geospatial Data Processing</li>
             <li class="column one-half">Google Cloud Platform</li>
             <li class="column one-half">Amazon Web Services</li>
             <li class="column one-half">Machine Learning, AI</li>
             <li class="column one-half">Docker, Kubernetes, Serverless</li>
-            <li class="column one-half">Terraform, Ansible</li>
+            <li class="column one-half">Terraform, AWS Cloud Development Kit</li>
             <li class="column one-half">PostgreSQL, PostGIS, Elastic</li>
-            <li class="column one-half">Circle CI, Github Actions</li>
+            <li class="column one-half">Gitlab CI/CD, Github Actions, Circle CI</li>
             <li class="column one-half">Agile, Scrum, Kanban, TDD</li>
             <li class="column one-half">API Integrations, Clean Architecture</li>
             <li class="column one-half">Leadership</li>
@@ -78,19 +78,19 @@
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Carbon Mapper, Inc.</h3>
-		<h4 class="resume-item-details">Senior Software Engineer &bull; 2023-Present</h4>
-		<p class="resume-item-copy">Back end engineer, with impacts including:</p>
+		<h4 class="resume-item-details">Principal Software Engineer &bull; 2023-Present</h4>
+		<p class="resume-item-copy">Back-end/API engineer, with impacts including:</p>
 		<ul>
-			<li>Connected systems across organizational and cloud platform boundaries</li>
-			<li>Extended AWS infrastructure and automation to support new geospatial imagery products</li>
-			<li>Hardened Spatio-Temporal Asset Catalog (STAC) API to improve reliabilty and compliance</li>
-			<li>AWS, AWS Cloud Development Kit (CDK), GCP, Terraform, Python, STAC, Github Actions</li>
+			<li>Imagining, planning, and implementing generation and delivery of new geospatial products to meet requirements of $95M contract</li>
+			<li>Connecting systems with partners across organizational and cloud platform boundaries</li>
+			<li>Hardening Spatio-Temporal Asset Catalog (STAC) API to improve reliabilty and compliance</li>
+			<li>AWS, AWS CDK, GCP, Terraform, Python, STAC, Gitlab CI/CD</li>
 		</ul>
 	</div>
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Arizona State University</h3>
-		<h4 class="resume-item-details">Principal Software Engineer &bull; 2021-Present</h4>
+		<h4 class="resume-item-details">Principal Software Engineer &bull; 2021-2024</h4>
 		<p class="resume-item-copy">Lead engineer for the <a href="https://allencoralatlas.org">Allen Coral Atlas</a>, responsible for:</p>
 		<ul>
 			<li>Directing engineering strategy in collaboration with Atlas program leadership</li>
